XP Framework ChangeLog
========================================================================
$Id$

Version ?.?.?, released ????-??-??
----------------------------------
SVN version: ?????

Features
~~~~~~~~
- Made only those connections available in rdbms.DriverManager where the 
  correct driver is loaded 
  http://news.xp-framework.net/article/303/2009/06/09
  (friebe)


Version 5.7.3, released 2009-06-08
----------------------------------
SVN version: 13125

Heads up!
~~~~~~~~~
- Changed text.doclet.Doclet::start() to be abstract
  (friebe)
- Removed webservices.soap.transport.SOAPHTTPSTransport - the transport
  class SOAPHTTPTransport can handle this already
  (hinckel)
- Replaced all base RPC webservice transport classes with newly created
  scriptlet.rpc.transport.AbstractRpcTransport class
  (hinckel)
- Rewrote FTP API to no longer depend on ext/ftp
  http://news.xp-framework.net/article/298/2009/05/17/
  (friebe)
- Made scriptlet.xml.workflow.checkers.ParamChecker and 
  scriptlet.xml.workflow.casters.ParamCaster abstract.
  (kiesel)
- Deprecated global constants in scriptlet.xml.XMLScriptletResponse
  in favor of class constants
  (kiesel)
- Deprecated HTTP_* constants, use peer.http.HttpConstants class 
  constants instead.
  (kiesel)
- Removed net.xp_framework.website from ports (now resides in xpadmin
  repository, web/src)
  (friebe)
- Modified package mapping to also work from client to server in 
  remote.protocol.Serializer
  (gelli)

Bugfixes
~~~~~~~~
- Fixed JSONDecoder unserialization for objects having __wakeup() method
  declared (e.g. util.Date)
  (hinckel)
- Made JSONClient work again by using JsonRequestMessage::create() instead
  of JsonMessage::createCall() function when invoking RPC
  (hinckel)
- Fixed GenericHttpTransport (which is not JsonRpcHttpTransport) to work
  with "new" HttpConnection and HttpRequest object (see RFC #0162)
  (hinckel)
- Fixed image tags parsing in text.doclet.markup API for multiple 
  adjacent images