@@ -157,9 +157,10 @@
           $e->setFlash(NULL);
         }
 
-        $date= self::lookup($info['EXIF'], 'datetimeoriginal', 'datetimedigitized');
-        $t= sscanf($date, '%4d:%2d:%2d %2d:%2d:%2d');
-        $e->setDateTime(new Date(mktime($t[3], $t[4], $t[5], $t[1], $t[2], $t[0])));
+        if (NULL !== ($date= self::lookup($info['EXIF'], 'datetimeoriginal', 'datetimedigitized'))) {
+          $t= sscanf($date, '%4d:%2d:%2d %2d:%2d:%2d');
+          $e->setDateTime(new Date(mktime($t[3], $t[4], $t[5], $t[1], $t[2], $t[0])));
+        }
       }
       return $e;
     }
